<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#e6e6e6">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sex"/>

            <CheckBox
                android:id="@+id/tutorSexFemaleCheckBoxResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:textSize="15sp"
                android:text="@string/female_tutor">
            </CheckBox>

            <CheckBox
                android:id="@+id/tutorSexMaleCheckBoxResponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/male_tutor" >
            </CheckBox>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tutor_job"/>

            <Spinner
                android:id="@+id/tutor_job"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tutor_level"/>

            <Spinner
                android:id="@+id/tutor_level"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/salary"/>

            <EditText
                android:id="@+id/salary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:textSize="15sp"
                android:hint="@string/salary_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/search_tutor_mode"/>

            <Spinner
                android:id="@+id/search_tutor_mode"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>